src/main/metadata-excluded/objects/Model_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StarElite</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <picklist>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_For_Took_Kit_Compare_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Model Mapping</label>
    <listViews>
        <fullName>Model_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Region__c</columns>
        <columns>User__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Model Mapping</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Model-{0000}</displayFormat>
        <label>Model Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Mapping</pluralLabel>
    <recordTypes>
        <fullName>Tool_Kit</fullName>
        <active>true</active>
        <description>Used to save the vendor mapping data when the user created the new tool kit data, system automatically find the vendor information</description>
        <label>Tool Kit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>